fixed bug associated w wrapping text on long continuous strings

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,6 +49,10 @@ margin: 0%
     top: 85px;
 }
 
+.wrap-it {
+    word-wrap:break-word;
+}
+
 /*checked*/
 .three-qtr-wide {
     width: 73%;
